<resources>
    <string name="app_name">ToDo</string>
    <string name="home_botao_login">Entrar</string>
    <string name="home_botao_cadastro">Cadastro</string>
    <string name="cadastro_textview_titulo">Olá!</string>
    <string name="cadastro_textview_subtitulo">Crie uma nova conta.</string>
    <string name="cadastro_hint_nome">Nome</string>
    <string name="cadastro_hint_email">Email</string>
    <string name="cadastro_hint_senha">Senha</string>
    <string name="cadastro_botao_cadastrar">Cadastrar</string>
    <string name="cadastro_textview_contaexistente">Já possui conta?</string>
    <string name="cadastro_textview_login">Faça login.</string>
    <string name="login_textview_titulo">Bem-vindo!</string>
    <string name="login_textview_subtitulo">Faça login para continuar.</string>
    <string name="login_textview_senhaesquecida">Esqueceu sua senha?</string>
    <string name="login_textview_containexistente">Ainda não possui uma conta?</string>
    <string name="login_textview_cadastro">Cadastre-se.</string>
    <string name="recuperacaosenha_botao_enviaremail">Enviar e-mail</string>
    <string name="adicionartarefa_hint_nometarefa">Nome da tarefa</string>
    <string name="adicionartarefa_hint_descricaotarefa">Descrição de tarefa</string>
    <string name="adicionartarefa_hint_data">Data de vencimento</string>
    <string name="adicionartarefa_botao_cancelar">Cancelar</string>
    <string name="adicionartarefa_botao_adicionar">Adicionar Tarefa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>