<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.adicionartarefa.AdicionarTarefaFragment" >

    <ImageView
        android:id="@+id/btnVoltarAdicionarTarefa"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/icon_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputNomeTarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/adicionartarefa_hint_nometarefa"
        android:inputType="text"
        android:minHeight="50dp"
        app:layout_constraintTop_toBottomOf="@+id/btnVoltarAdicionarTarefa"
        tools:layout_editor_absoluteX="-16dp" />

    <EditText
        android:id="@+id/inputDescricaoTarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/adicionartarefa_hint_descricaotarefa"
        android:inputType="textMultiLine"
        android:minHeight="50dp"
        app:layout_constraintTop_toBottomOf="@+id/inputNomeTarefa"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdicionarTarefa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/magenta"
        android:clickable="true"
        android:contentDescription="@string/adicionartarefa_botao_adicionar"
        android:src="@drawable/icon_add"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>